kubernetes/on-prem/namespace-logging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    environment: logging
    managed-by: kubernetes
